--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/main.css" />
+  </head>
+  <body>
+    <div id="page-home">
+      <div class="content">
+        <header>
+          <p>Ecoleta</p>
+          <a href="#">Cadastrar um ponto de coleta</a>
+        </header>
 
-    <div class="content">
-    <header>
-        <p>Ecoleta</p>
-        <a href="#">Cadastrar um ponto de coleta</a>
-    </header>
-  
-    <h1>Seu marketplace de coleta de resíduos</h1>
-    <p> Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
-    <button>Pesquisar pontos de coleta</button>
-
+        <h1>Seu marketplace de coleta de resíduos</h1>
+        <p>
+          Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente
+        </p>
+        <button>Pesquisar pontos de coleta</button>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
