--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="page-home">
       <div class="content">
         <header>
-          <p>Ecoleta</p>
+          <p class="titulo">Ecoleta</p>
           <a href="#">Cadastrar um ponto de coleta</a>
         </header>
 
